Align filesize values to the left, fixes #1246

--- a/templates/we1rdo/css/style.css
+++ b/templates/we1rdo/css/style.css
@@ -219,7 +219,7 @@ table.spots td.date,
 table.spots th.date {min-width:140px; width:140px;}
 table.spots td.filesize,
 table.spots th.filesize {min-width:84px; width:84px; }
-table.spots td.filesize {text-align:right;}
+table.spots td.filesize {text-align:left;}
 table.spots td.nzb,
 table.spots th.nzb {min-width:26px; width:26px;}
 table.spots td.multinzb,
